# trojan-rs

./: .gitignore  Cargo.toml  README.md  report.html  report.json
.github/workflows/: rust.yml
samples/: .gitignore  client.toml  gen_certs.sh  server.toml
src/: certificates.rs  dns.rs  forwarding.rs  forwarding_client.rs  main.rs  socks5.rs  trojan_request.rs  utils.rs
src/adapters/: mod.rs  tun.rs
src/adapters/socks5/: client.rs  mod.rs
src/adapters/socks5/protocol/: destination.rs  identify.rs  mod.rs  request.rs
src/config/: cli.rs  client.rs  mod.rs  server.rs
src/networking/: forwarding.rs  http_server.rs  mod.rs  tls.rs
src/server/: forwarding_client.rs  main.rs  mod.rs  socket_handling.rs  trojan.rs
src/socks5/: client.rs  destination.rs  identify.rs  mod.rs  request.rs
src/tls/: certificates.rs  io.rs  mod.rs
src/trojan/: client.rs  mod.rs  protocol.rs  websocket.rs
src/trojan/server/: main.rs  mod.rs  redirect.rs  socket_handling.rs  webserver.rs
src/trojan_server/: main.rs  mod.rs  socket_handling.rs  trojan.rs
