[package]
name = "trojan-rs"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.38", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
tokio-native-tls = "0.3.1"
hex = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
sha2 = "0.10.8"
simple_logger = "5.0.0"
pico-args = "0.5.0"

tun2 = { version = "2", features = ["async"], optional = true }
ipstack = { version = "0.0.10", optional = true }

[dev-dependencies]
toml = "0.8.14"

[features]
default = ["all-clients", "server"]
vendored = ["tokio-native-tls/vendored"]
all-clients = ["socks5", "tun"]
socks5 = []
tun = ["dep:tun2", "dep:ipstack"]
server = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
