[package]
name = "trojan-rs"
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.38", default-features = false, features = [
    "macros",
    "rt-multi-thread",
    "net",
    "io-util",
] }
tokio-native-tls = "0.3.1"
hex = "0.4.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }
sha2 = "0.10.8"
simple_logger = "5.0.0"
pico-args = "0.5.0"
tun2 = { version = "2", features = ["async"] }
ipstack = "0.0.10"
tokio-tungstenite = "0.23.1"
tokio-util = { version = "0.7.11", features = ["io"] }
futures = "0.3.30"
async-trait = "0.1.80"

[dev-dependencies]
toml = "0.8.14"

[features]
default = ["all-clients", "server", "websockets"]
vendored = ["tokio-native-tls/vendored"]
websockets = []
all-clients = ["socks5", "tun"]
socks5 = []
tun = []
server = []

[profile.release]
opt-level = "z"
lto = true
panic = "abort"
strip = true
codegen-units = 1
